[BUG] #27964: Added overflow-y for the sidebar and added custom scroll bar globally

--- a/gui/src/public/css/LeftMenuTemplate.scss
+++ b/gui/src/public/css/LeftMenuTemplate.scss
@@ -1,5 +1,5 @@
 .LeftMenuTemplate {
-  height: 100%;
+  height: 100%; 
   overflow: auto;
   display: flex;
   flex-direction: row;
@@ -11,6 +11,28 @@
   }
   .sidenav---sidenav---_2tBP {
     position: relative;
+    overflow-y: auto;
+    overflow-x: hidden; // added overflow-y : auto [BUG #27964]
+  }
+
+  // added custom scroll bar for all apps
+  .sidenav---sidenav---_2tBP::-webkit-scrollbar {
+    width: 10px;
+}
+
+  .sidenav---sidenav---_2tBP::-webkit-scrollbar-track {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgb(31, 66, 78);
+    background-color: #275362;
+    margin-top: 1px;
+    margin-bottom: 1px;
+  }
+  
+  .sidenav---sidenav---_2tBP::-webkit-scrollbar-thumb {
+    background-color: #306475;
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgb(69, 93, 101);
+    height: 100px;
   }
 
   .sidenav---sidenav-subnav---1EN61 {
